# galdr

./: .gitignore  PROMPT.md  README.md  build-and-deploy.ps1  deploy.sh  package.json  update.json  update.json.prev  update.test.json
scripts/: restore-update-test.ps1  test-update-local.ps1
src/: App.css  App.tsx
src-tauri/: .env.example  Cargo.toml  tauri.conf.json  updater.key.old  updater.key.pub  updater.key.pub.old
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  tray.rs  watcher.rs
src-tauri/src/commands/: convert.rs  forge.rs  mod.rs  preview.rs  settings.rs  subtitles.rs  watch_folder.rs
src-tauri/src/discord_rpc/: mod.rs
src-tauri/src/ffmpeg/: builder.rs  probe.rs  runner.rs
src-tauri/src/models/: conversion.rs  mod.rs  settings.rs  subtitle.rs  watch_folder.rs
src-tauri/src/whisper/: mod.rs  models.rs  runner.rs
src-tauri/windows/: .gitignore  English.nsh
src-tauri/windows/nsniuniuskin/: generate-assets.py  generate-skin-zip.py  installer.nsi  prepare-nsis.py
src-tauri/windows/nsniuniuskin/skin/: configpage.xml  default.xml  finishpage.xml  install.xml  installingpage.xml  licensepage.xml  msgBox.xml  uninstallfinishpage.xml  uninstallingpage.xml  uninstallpage.xml
src/components/: CompressionControls.tsx  ConvertOperations.tsx  ExtractFramesPanel.tsx  LogPanel.tsx  MediaInfoCard.tsx  MediaPreview.tsx  RuneImportPreview.tsx  RuneTagEditor.tsx  SubtitleStylePanel.tsx  TranscriptEditor.tsx  UpdateBanner.tsx
src/options/: languages.ts
src/pages/: BatchConvertPage.tsx  CompressPage.tsx  ConvertPage.tsx  ForgePage.css  ForgePage.tsx  HomePage.tsx  RunesPage.tsx  SettingsPage.tsx  SubtitlesPage.tsx  WatchFoldersPage.tsx
src/store/: forgeStore.ts  (+3 more)
(+8 files in other folders)
