[package]
name = "galdr"
version = "0.2.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "galdr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.22"
discord-rich-presence = "1"
once_cell = "1"
notify = "6"
# Blocking HTTP client for whisper model downloads (rustls avoids a system
# OpenSSL dependency on Windows).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# Tauri runs commands on tokio; we need spawn_blocking for the blocking
# ffmpeg/whisper/download work so async commands stay responsive.
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_os = "windows")'.dependencies]
zip = { version = "4", default-features = false, features = ["deflate"] }

